Fixes floating background transition on collapse in SideNavigation

--- a/src/components/Navigation/SideNavigation/SideNavigation.scss
+++ b/src/components/Navigation/SideNavigation/SideNavigation.scss
@@ -130,6 +130,7 @@
     transition: top 0.2s ease-in-out;
     &-collapsed {
       left: 2.6875rem;
+      transition: left 0.2s ease-in-out 0.1s;
     }
     &-transitioning {
       background: $brand-color;
